--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -22,8 +22,30 @@
         <view>商品名：安工logo</view>
         <view>类型: 纪念挂件</view>
         <view>编号：201808080888</view>
-        <button size='mini' type='warn' bindtap="buyTicket">立即购买</button>
+        <!--<button size='mini' type='warn' bindtap="buyTicket">立即购买</button>-->
+        <view>
+          <modal title="购买请联系" cancel-text="关闭" confirm-text="确定" hidden="{{mHidden}}" bindconfirm="changeModel" bindcancel="modelCancel">
+            <image class='book-img' mode='scaleToFill'  src='../../images/logo.png'></image>
+          </modal>
+          <button size='mini' type='warn' bindtap="openCode">立即购买</button>
+        </view>
       </view>
     </view>
+  </view>
+  <view class="container2">
+    <view class="panel">
+          <label class="title">请输入查询内容</label>
+          <input class="inputarea"/>
+          <button bindtap='onRequest' type="primary" class="searBtn">查询</button>
+      </view>
+      <scroll-view class="article-list" style="height:500px" scroll-y="true" bindscrolltolower="nextPage">
+        <block wx:for="{{list}}" wx:key="">
+          <view class="list-item" index="{{index}}">
+            <view class="title">
+            <view class="title-name">{{item.productName}}</view>
+            </view>
+          </view>
+        </block>
+    	  </scroll-view>>
   </view>
 </view>
