--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,31 +1,25 @@
 <swiper class="banner" indicator-dots="{{indicatorDots}}"
-  autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}">
-  <block wx:for="{{imgUrls}}" wx:key="key">
-    <swiper-item >
-      <image class='banner-image' src="{{item}}"/>
-    </swiper-item>
-  </block>
+        autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}">
+    <block wx:for="{{imgUrls}}" wx:key="key">
+        <swiper-item>
+            <image class='banner-image' src="{{item}}"/>
+        </swiper-item>
+    </block>
 </swiper>
 <view>
     <view class='theme'>推荐购买</view>
     <view>
-     <image class='card-book' mode='scaleToFill' src='../../images/ipad.png'>
-          </image>
-          <image class='card-book' mode='scaleToFill'  src='../../images/logo.png'>
-          </image>
-          <image class='card-book' mode='scaleToFill'  src='../../images/mi.png'>
-          </image>
+        <image class='card-book' mode='scaleToFill' src='../../images/ipad.png'></image>
+        <image class='card-book' mode='scaleToFill' src='../../images/logo.png'></image>
+        <image class='card-book' mode='scaleToFill' src='../../images/mi.png'></image>
     </view>
 
 
     <view class='theme'>最新上架</view>
     <view>
-     <image class='card-book' mode='scaleToFill' src='../../images/ipad.png'>
-          </image>
-          <image class='card-book' mode='scaleToFill'  src='../../images/logo.png'>
-          </image>
-          <image class='card-book' mode='scaleToFill'  src='../../images/mi.png'>
-          </image>
+        <image class='card-book' mode='scaleToFill' src='../../images/ipad.png'></image>
+        <image class='card-book' mode='scaleToFill' src='../../images/logo.png'></image>
+        <image class='card-book' mode='scaleToFill' src='../../images/mi.png'></image>
     </view>
 
 </view>
