--- a/pages/search/search.wxss
+++ b/pages/search/search.wxss
@@ -3,15 +3,15 @@
   width: 100%;
   height: 100rpx;
   padding-top: 50rpx;
-  background: pink;
+  background: whitesmoke;
   display: flex;
   flex-flow: row;
-  border-bottom: 3rpx solid #333333;
+  border-bottom: 3rpx solid #999;
 }
 .search input{
-  height: 30rpx;
+  height: 50rpx;
   padding: 5prx;
-  background: #F3F3F3;
+  background: #999;
   width: 70%;
   border-radius: 10rpx;
   margin-left: 5%;
@@ -21,10 +21,10 @@
   height: 60rpx;
 }
 .search_result{
-  background:#F3F3F3;
+  background:#999;
 }
 .picker{
-  background: #333333;
+  background: #999;
   color: white;
   height: 70rpx;
   line-height: 50rpx;
