--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -14,7 +14,6 @@
                 <image src='../../images/icon/user@default.png'></image>
             </view>
             <!--<button wx:if="{{!userInfo}}" open-type="getUserInfo" bindgetuserinfo="onLogintap">授权登录</button>-->
-            <button wx:if="{{!userInfo}}" open-type="getUserInfo" bindgetuserinfo="doLogin">授权登录</button>
         </block>
     </view>
     <view class='bottom'>
@@ -28,4 +27,11 @@
             0<text>购物积分</text>
         </view>
     </view>
+
+    <block wx:if="{{userInfo}}" wx:key="key">
+    </block>
+    <block wx:else>
+        <button wx:if="{{!userInfo}}" open-type="getUserInfo" bindgetuserinfo="doLogin">授权登录</button>
+    </block>
+
 </view>
