--- a/app.wxss
+++ b/app.wxss
@@ -12,7 +12,7 @@
 .theme{
   width: 100%;
   height: 70rpx;
-  background: rgb(32, 138, 238);
+  background: pink;
   color: white;
   font-weight: bold;
   line-height: 70rpx;
